# API

./: .gitignore  .pdm-python  1  README.md  app.py  db.py  deduplication.py  docker-compose.yaml  kakao_manager.py  login.html  pyproject.toml  requirements.txt  start.sh  test.py
fastapi/: README.md
fastapi/templates/: index.html  user_info.html
src/final_login/: '  .main.py.swp  README.md  app.py  auth.py  database.py  db.py  db_model.py  kakao_manager.py  log_handler.py  main.py  pyproject.toml  utils.py  validate.py
src/final_login.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/final_login/routers/: .tickets.py.swp  alram.py  auth.py  banner.py  consumer.py  exclusive_all.py  exclusive_main.py  kakao.py  like.py  ml.py  rank.py  sign_up.py  tickets.py  weekend.py
src/final_login/routes/: auth.py  consumer.py  kakao.py  protected.py  sign_up.py
src/final_login/src/final_login/: app.py  login.html  test.py
tests/: parquet.py  test.py
